18/04/2012:
	- Major rewrite of CVT code to unify TIFF and JPEG2000 region
	  export. Region compositing now in TileManager->getRegion with
	  modified getRegion Kakadu function. Changes also to View class
	  and ColourTransforms code to enable greater modularity for
	  image processing to regions. ColourTransforms renamed to
	  Transforms.
	  Thanks to The National Library of Wales, who will be using
	  iipsrv & iipmooviewer to deliver their Historic Newspapers
	  in 2012.


21/03/2012:
	- Fix to TPTImage.c to force RGB conversion for YCbCr compressed
	  JPEG TIFFs, which is now the default in VIPS. Thanks to John
	  Cupitt for spotting this.


17/03/2012:
	- Changes to View.[h,cc] to make sure getRequestWidth and Height
	  return correctly rounded values.


12/03/2012:
	- Added HTTP Status: 400 Bad Request to error messages.


28/01/2012:
	- Fixes to KakaduImage.cc to properly catch exceptions during file
	  opening and a check for existence during codestream shutdown.
	- Also added a check to updateTimeStamp to throw an exception if file
	  unreadable.


28/08/2011:
	- Performance improvement to JPEG2000 16->8 bit downsampling. Now
	  using integer arithmetic rather than float.


24/08/2011:
	- Updates to configure.in, FIF.cc and DeepZoom.cc to check for and
	  handle missing setenv, unsetenv and log2 functions. Fixes problem
	  on Solaris 10.


02/08/2011:
	- Changed timegm function in FIF.cc to use more cross-platform POSIX
	  mktime function instead. Fixes compilation error on Solaris.


22/07/2011:
	- Added 16bit and CIELAB support for JPEG2000.
	- Other minor cleanups.


24/05/2011:
	- Fix added to DeepZoom.cc as FreeBSD does not have the log2 function.
	  Thanks to Andrew Hankinson for spotting this.


23/05/2011:
	- Another fix to ensure the max layers variable is correctly used in
	  Zoomify and DeepZoom output.


15/04/2009: Version 0.9.9 Released


15/04/2011:
	- Fix to View.h to properly take into account max layers variable.


14/04/2011: